# practica-2025-VGG16-sample

./: .gitignore  CMakeLists.txt  README.md  main.py  vgg16.py
src/: main.cc
